--- a/css/main.css
+++ b/css/main.css
@@ -290,20 +290,26 @@
 }
 
 .nav-list__title {
-  color: var(--color-primary-dark);
+  color: var(--color-primary-dark) !important;
   text-transform: uppercase;
   font-weight: 400 !important;
+  line-height: 2 !important;
+}
+.nav-list__btn-keluar {
+  background-color: var(--color-primary-dark);
 }
 .nav-list__title-keluar {
   text-transform: uppercase;
-  background-color: var(--color-primary-dark);
   color: var(--color-white);
-  margin-top: 1.2rem !important;
-  padding: 1.2rem 2.4rem !important;
+  line-height: 2 !important;
 }
 .nav-list__item-menu {
   color: var(--color-primary-dark);
   font-weight: 400 !important;
+  line-height: 2 !important;
+}
+.nav-list__transaksi {
+  text-align: left !important;
 }
 
 .theme--light.v-icon {
@@ -362,7 +368,7 @@ tbody tr td {
   color: var(--color-primary) !important;
 }
 
-@media only screen and (max-width: 37.5em) {
+@media only screen and (max-width: 68.75em) {
   .navigation__menu-main {
     display: none !important;
   }
@@ -370,10 +376,14 @@ tbody tr td {
 .navigation__menu-mobile {
   display: none !important;
 }
-@media only screen and (max-width: 37.5em) {
+@media only screen and (max-width: 68.75em) {
   .navigation__menu-mobile {
     display: block !important;
   }
+}
+
+.v-application--is-ltr .v-list-group--no-action > .v-list-group__items > .v-list-item {
+  padding: 0 !important;
 }
 
 .accent--text {
@@ -405,6 +415,10 @@ li {
   li {
     line-height: 1.8;
   }
+}
+
+.v-list-group__header {
+  padding: 0 !important;
 }
 
 .image__grid, .image__grid-child-5, .image__grid-child-4, .image__grid-child-3, .image__grid-child-2 {
