--- a/sass/_general.scss
+++ b/sass/_general.scss
@@ -294,23 +294,35 @@
 
 .nav-list{
     &__title{
-        color: var(--color-primary-dark);
+        color: var(--color-primary-dark) !important;
         text-transform: uppercase;
         font-weight: 400 !important;
+        line-height: 2 !important;
+    }
+
+    &__btn-keluar{
+        background-color: var(--color-primary-dark);
     }
 
     &__title-keluar{
         text-transform: uppercase;
-        background-color: var(--color-primary-dark);
         color: var(--color-white);
-        margin-top: 1.2rem !important;
-        padding: 1.2rem 2.4rem !important;
+        line-height: 2 !important;
+        // margin-top: 1.2rem !important;
+        // padding: 1.2rem 2.4rem !important;
     }
 
     &__item-menu{
         color: var(--color-primary-dark);
         font-weight: 400 !important;
+        line-height: 2 !important;
+    }
+
+    &__transaksi{
+        text-align: left !important;
     }
 }
+
+
 
 
