--- a/sass/main.scss
+++ b/sass/main.scss
@@ -6,3 +6,7 @@
 @import './login-register';
 @import './customer/customer-rincian-transaksi';
 @import './customer/customer-rincian-pesanan';
+@import './pengelola/pengelola-cru-kos';
+@import './pengelola/pengelola-cru-kamar';
+@import './pengelola/pengelola-pesanan';
+@import './pengelola/pengelola-pesanan-rincian';
