--- a/sass/pengelola/_pengelola-pesanan.scss
+++ b/sass/pengelola/_pengelola-pesanan.scss
@@ -1,4 +1,4 @@
-.cust-transaksi{
+.pengelola-pesanan{
     &__header{
         display: grid;
         grid-template-columns: repeat(2, 1fr) repeat(2, 0.5fr);
@@ -136,7 +136,7 @@
     }
 }
 
-.cust-transaksi{
+.pengelola-pesanan{
     &--detail{
         display: grid;
         grid-template-columns: 1fr;
@@ -169,6 +169,10 @@
                 grid-area: 1 / 1 / 2 / 2;
 
                 text-align: left;
+                flex-direction: column;
+                align-items: flex-start;
+                justify-content: flex-start;
+                line-height: 2;
             }
 
             &__header-2{
@@ -198,25 +202,118 @@
             grid-area: 3 / 1 / 4 / 2;
 
             display: grid;
-            grid-template-columns: 0.25fr 1fr;
-            grid-template-rows: 1fr;
+            grid-template-columns: 0.5fr 1fr;
+            grid-template-rows: repeat(5, auto);
             grid-column-gap: 0px;
             grid-row-gap: 0px;
 
-            @media only screen and (max-width: $bp-medium) {
-                grid-template-columns: 0.5fr 1fr;
-            }
+            // @media only screen and (max-width: $bp-smallest) {
+            //     grid-template-columns: 1fr;
+            //     grid-template-rows: repeat(10, auto);
+            // }
 
-            @media only screen and (max-width: $bp-mobile) {
+            @media only screen and (max-width: $bp-smallest) {
                 grid-template-columns: 1fr 1fr;
             }
 
-            &__desc-1{
-                grid-area: 1 / 1 / 5 / 2; 
+            &--template{
+                display: grid !important;
+                align-items: center !important;
+                justify-content: flex-start !important;
+                text-align: left;
             }
 
-            &__desc-2{
-                grid-area: 1 / 2 / 2 / 3;
+            &__desc-1 {
+                @extend .pengelola-pesanan--detail__child-3--template;
+                grid-area: 1 / 1 / 2 / 2; 
+
+                // @media only screen and (max-width: $bp-smallest) {
+                //     grid-area: 1 / 1 / 2 / 2; 
+                // }
+            }
+            
+            &__desc-2 { 
+                @extend .pengelola-pesanan--detail__child-3--template;
+                grid-area: 1 / 2 / 2 / 3; 
+
+                // @media only screen and (max-width: $bp-smallest) {
+                //     grid-area: 2 / 1 / 3 / 2; 
+                // }
+            }
+            
+            &__desc-3 { 
+                @extend .pengelola-pesanan--detail__child-3--template;
+                grid-area: 2 / 1 / 3 / 2; 
+
+                // @media only screen and (max-width: $bp-smallest) {
+                //     grid-area: 3 / 1 / 4 / 2; 
+                // }
+            }
+            
+            &__desc-4 { 
+                @extend .pengelola-pesanan--detail__child-3--template;
+                grid-area: 2 / 2 / 3 / 3;
+                
+                // @media only screen and (max-width: $bp-smallest) {
+                //     grid-area: 4 / 1 / 5 / 2; 
+                // }
+            }
+            
+            &__desc-5 { 
+                @extend .pengelola-pesanan--detail__child-3--template;
+                grid-area: 3 / 1 / 4 / 2; 
+
+                // @media only screen and (max-width: $bp-smallest) {
+                //     grid-area: 5 / 1 / 6 / 2; 
+                // }
+            }
+            
+            &__desc-6 { 
+                @extend .pengelola-pesanan--detail__child-3--template;
+                grid-area: 3 / 2 / 4 / 3; 
+
+                // @media only screen and (max-width: $bp-smallest) {
+                //     grid-area: 6 / 1 / 7 / 2; 
+                // }
+            }
+            
+            &__desc-7 { 
+                @extend .pengelola-pesanan--detail__child-3--template;
+                grid-area: 4 / 1 / 5 / 2; 
+
+                // @media only screen and (max-width: $bp-smallest) {
+                //     grid-area: 7 / 1 / 8 / 2; 
+                // }
+            }
+            
+            &__desc-8 { 
+                @extend .pengelola-pesanan--detail__child-3--template;
+                grid-area: 4 / 2 / 5 / 3; 
+
+                // @media only screen and (max-width: $bp-smallest) {
+                //     grid-area: 8 / 1 / 9 / 2; 
+                // }
+            }
+
+            &__desc-9 { 
+                @extend .pengelola-pesanan--detail__child-3--template;
+                grid-area: 5 / 1 / 6 / 2; 
+
+                // @media only screen and (max-width: $bp-smallest) {
+                //     grid-area: 9 / 1 / 10 / 2; 
+                // }
+            }
+            
+            &__desc-10 { 
+                grid-area: 5 / 2 / 6 / 3; 
+                display: flex;
+                flex-direction: row;
+                align-items: center;
+                justify-content: flex-start;
+
+                // @media only screen and (max-width: $bp-small) {
+                //     grid-area: 11 / 1 / 12 / 2; 
+                // }
             }
         }
 
@@ -230,11 +327,24 @@
             grid-row-gap: 0px;
 
             &__desc-1{
+                display: flex;
+                flex-direction: column;
+                align-items: flex-start;
+                justify-content: flex-start;
+
+                margin-top: 12px;
                 grid-area: 1 / 1 / 5 / 2; 
             }
 
             &__desc-2{
                 grid-area: 1 / 2 / 2 / 3;
+                display: grid;
+                align-items: flex-end;
+                justify-content: flex-end;
+
+                &__btn{
+                    width: 100%;
+                }
             }
         }
     }
