--- a/sass/_login-register.scss
+++ b/sass/_login-register.scss
@@ -102,7 +102,7 @@
     grid-column-gap: 0;
     grid-row-gap: 0;
 
-    @media only screen and (max-width: $bp-large) {
+    @media only screen and (max-width: $bp-largest) {
         grid-template-columns: 0.5fr 1fr 0.5fr;
     }
 
