--- a/sass/main.scss
+++ b/sass/main.scss
@@ -10,3 +10,6 @@
 @import './pengelola/pengelola-cru-kamar';
 @import './pengelola/pengelola-pesanan';
 @import './pengelola/pengelola-pesanan-rincian';
+@import './pengelola/pengelola-transaksi-unduh';
+@import './pengelola/pengelola-transaksi-masuk';
+@import './pengelola/pengelola-transaksi-keluar';
