--- a/sass/_general.scss
+++ b/sass/_general.scss
@@ -115,6 +115,10 @@
     &__thin{
         font-weight: 300;
         font-size: 2.4rem;
+
+        @media only screen and (max-width: $bp-small) {
+            font-size: 14px !important;
+        }
     }
 
     &__paragraph{
