--- a/sass/pengelola/_pengelola-pesanan-rincian.scss
+++ b/sass/pengelola/_pengelola-pesanan-rincian.scss
@@ -81,7 +81,7 @@
 
             display: grid;
             grid-template-columns: 0.5fr 1fr;
-            grid-template-rows: repeat(5, auto);
+            grid-template-rows: repeat(6, auto);
             grid-column-gap: 0px;
             grid-row-gap: 0px;
 
@@ -105,93 +105,70 @@
                 @extend .pengelola-pesanan--detail__child-3--template;
                 grid-area: 1 / 1 / 2 / 2; 
 
-                // @media only screen and (max-width: $bp-smallest) {
-                //     grid-area: 1 / 1 / 2 / 2; 
-                // }
             }
             
             &__desc-2 { 
                 @extend .pengelola-pesanan--detail__child-3--template;
                 grid-area: 1 / 2 / 2 / 3; 
 
-                // @media only screen and (max-width: $bp-smallest) {
-                //     grid-area: 2 / 1 / 3 / 2; 
-                // }
             }
             
             &__desc-3 { 
                 @extend .pengelola-pesanan--detail__child-3--template;
                 grid-area: 2 / 1 / 3 / 2; 
-
-                // @media only screen and (max-width: $bp-smallest) {
-                //     grid-area: 3 / 1 / 4 / 2; 
-                // }
             }
             
             &__desc-4 { 
                 @extend .pengelola-pesanan--detail__child-3--template;
                 grid-area: 2 / 2 / 3 / 3;
-                
-                // @media only screen and (max-width: $bp-smallest) {
-                //     grid-area: 4 / 1 / 5 / 2; 
-                // }
+
             }
             
             &__desc-5 { 
                 @extend .pengelola-pesanan--detail__child-3--template;
                 grid-area: 3 / 1 / 4 / 2; 
 
-                // @media only screen and (max-width: $bp-smallest) {
-                //     grid-area: 5 / 1 / 6 / 2; 
-                // }
             }
             
             &__desc-6 { 
                 @extend .pengelola-pesanan--detail__child-3--template;
                 grid-area: 3 / 2 / 4 / 3; 
 
-                // @media only screen and (max-width: $bp-smallest) {
-                //     grid-area: 6 / 1 / 7 / 2; 
-                // }
             }
             
             &__desc-7 { 
                 @extend .pengelola-pesanan--detail__child-3--template;
                 grid-area: 4 / 1 / 5 / 2; 
 
-                // @media only screen and (max-width: $bp-smallest) {
-                //     grid-area: 7 / 1 / 8 / 2; 
-                // }
             }
             
             &__desc-8 { 
                 @extend .pengelola-pesanan--detail__child-3--template;
                 grid-area: 4 / 2 / 5 / 3; 
 
-                // @media only screen and (max-width: $bp-smallest) {
-                //     grid-area: 8 / 1 / 9 / 2; 
-                // }
             }
 
             &__desc-9 { 
                 @extend .pengelola-pesanan--detail__child-3--template;
                 grid-area: 5 / 1 / 6 / 2; 
-
-                // @media only screen and (max-width: $bp-smallest) {
-                //     grid-area: 9 / 1 / 10 / 2; 
-                // }
             }
             
             &__desc-10 { 
+                @extend .pengelola-pesanan--detail__child-3--template;
                 grid-area: 5 / 2 / 6 / 3; 
+            }
+
+            &__desc-11 { 
+                @extend .pengelola-pesanan--detail__child-3--template;
+                grid-area: 6 / 1 / 7 / 2; 
+            }
+
+            &__desc-12 { 
+                grid-area: 6 / 2 / 7 / 3;
                 display: flex;
                 flex-direction: row;
                 align-items: center;
                 justify-content: flex-start;
-
-                // @media only screen and (max-width: $bp-small) {
-                //     grid-area: 11 / 1 / 12 / 2; 
-                // }
             }
         }
 
